# Traditonal_PPF

./: CMakeLists.txt  README.md
calculateFile/: 1.txt  2.txt  2gVoting.txt  2gVoting_sort.txt  README.md  cVoting.txt  gVoting.txt  gVoting_sort.txt  ppfCPU.txt  transformationGpu.txt
data/: .6f87851157f8b340d3235cea6cac8cfbfb2225bb.cam  cloud1_with_normals.pcd  cloud2_with_normals.pcd  last_.pcd  last_.ply  m_downsampled.pcd  model_downsample.ply  output.pcd  scene002.pcd  scene_downsample_noground.pcd  scene_noBackground.pcd  scene_normal.pcd  scene_withNANnormal.pcd  sputout.pcd
dataTest/: TFcamera_3Object.pcd  TFcamera_oneObject.pcd  inOrder_8404.pcd  littleScene.pcd  newOnlyOne.pcd  new拆分转角的数据.txt  oneObject_1968.pcd  oneObject_3295.pcd  oneObject_3295.ply  output.pcd  s.pcd  s1_1886_withoutGoodPose.pcd  s1_2767_withoutGoodPose.pcd  s1_3259.pcd  s1_3259.ply  s1_3487_withoutGoodPose.pcd  s1_5408.pcd  s2_3241.pcd  s3_4636.pcd  s4_2784.pcd  scene2.0.pcd  scene_with_normals.pcd  test3.ply  test4.pcd  不拆分转角的数据.txt  拆分转角的数据.txt
dataTest/qianyi/: 001.pcd  001.ply
dataTest/ruben/: 1.ply  1_remove_outliers.ply  2.ply  2_without_outliers.ply
dataTest/ruben/single/: 001.ply  002.ply  003.ply  004.ply  005.ply  006.ply  007.ply  008.ply  009.ply
dataTest/tengjv/: 001_noPlant.pcd  001_noPlant.ply  2.ply  WPLnew0330_withoutBackgroud.ply  output.pcd
include/: HCluster.h  Kernel.h  Model.h  PPF.h  PPFMatch.h  PointCloudPretreatment.h  Scene.h  SurfaceMatching.h  model.h  scene.h
modelScene/: component002.pcd  scene-model.pcd  scene-model.ply
modelScene/model/: Bar.pcd  Bar.ply  ceBar.pcd  ceBarWithoutNormal.ply  modelHeadAll.ply  modelSample_1.2f.pcd  modelSample_1.4f.pcd  modelSample_1.5f.pcd  modelSample_1f.pcd  modelSample_2.5f.pcd  modelSample_2f.pcd  modelSample_3f.pcd  modelWithoutBottom.pcd  modelWithoutBottom.ply  model_head.ply  newmodel.ply  testModel.ply
modelScene/scene/: box.ply  ceBar.pcd
sonor2018/1scene/: Scene0.pcd  Scene0.ply  Scene1.pcd  Scene1.ply
sonor2018/2scene/: Scene0.pcd
sonor2018/3scene/: Scene0.pcd  Scene1.pcd  Scene2.pcd
src/: F1.cu  F1.cuh  HCluster.cpp  HCluster.h  Kernel.cu  Model.cu  PPF.cpp  PPF.h  PPFMatch.cpp  PointCloudPretreatment.cpp  Scene.cu  SurfaceMatching.cpp  SurfaceMatching.h  kernel.cu  kernel.cuh  main.cpp  model.cu  newKernel.cu  scene.cu  stdafx.h
